--- a/index.html
+++ b/index.html
@@ -211,9 +211,7 @@
       <div class="footer-right">
         <p class="footer-company-about">
           <span>About Streambox</span>
-          <strong>Xovabot</strong> transforms conversations into experiences
-          with our innovative chatbot technology, offering a new era of
-          efficient and dynamic communication."
+          <strong>Streambox</strong> tekst tekst tekst tekst tekst tekst tekst
         </p>
       </div>
     </footer>
