--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <!--- google font link-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -31,6 +43,11 @@
       href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Fontawesome Link for Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    />
   </head>
   <body>
     <header class="header">
@@ -40,8 +57,9 @@
       <nav class="navbar">
         <a href="#home" class="active">Home</a>
         <a href="#about">Trending Movies</a>
-        <a href="#services">Services</a>
-        <a href="contact.html">Contact</a>
+        <a href="#services">Pricing</a>
+        <a href="#contact">Contact</a>
+        <a href="#signin">Signin</a>
       </nav>
     </header>
 
@@ -81,103 +99,353 @@
       </div>
       <span class="home-imgHover"></span>
     </section>
-    <!-- about section design -->
-    <section class="about" id="about">
-      <h2 class="heading">Trending  <span>Movies</span></h2>
-
-      <section>
-        <div class="section-title">Trending</div>
-        <div class="trending-grid">
-            <div class="card">
-                <img src="trending1.jpg" alt="Blue Beetle">
-                <div class="card-info">
-                    <h3>Blue Beetle</h3>
-                    <span class="badge action">Action</span>
-                    <span class="badge sci-fi">Science Fiction</span>
-                    <span class="rating">6.9</span>
-                </div>
-            </div>
-            <div class="card">
-                <img src="trending2.jpg" alt="Barbie">
-                <div class="card-info">
-                    <h3>Barbie</h3>
-                    <span class="badge comedy">Comedy</span>
-                    <span class="badge adventure">Adventure</span>
-                    <span class="rating">7.3</span>
-                </div>
-            </div>
-            <div class="card">
-                <img src="trending3.jpg" alt="Retribution">
-                <div class="card-info">
-                    <h3>Retribution</h3>
-                    <span class="badge thriller">Thriller</span>
-                    <span class="badge action">Action</span>
-                    <span class="rating">6.5</span>
-                </div>
-            </div>
-            <div class="card">
-                <img src="trending4.jpg" alt="A Million Miles Away">
-                <div class="card-info">
-                    <h3>A Million Miles Away</h3>
-                    <span class="badge drama">Drama</span>
-                    <span class="badge history">History</span>
-                    <span class="rating">7.9</span>
-                </div>
-            </div>
-            <div class="card">
-                <img src="trending5.jpg" alt="Talk to Me">
-                <div class="card-info">
-                    <h3>Talk to Me</h3>
-                    <span class="badge horror">Horror</span>
-                    <span class="badge thriller">Thriller</span>
-                    <span class="rating">7.3</span>
-                </div>
-            </div>
+    <!-- upcoming movie section starts  -->
+    <section class="upcoming-movie">
+      <div class="headerr">
+        <div class="subtitle">
+          <small>online Streaming</small>
+          <h4>Upcoming Movies</h4>
         </div>
-    </section>
-      
+      </div>
+      <div class="movie-card">
+        <div class="wrapper">
+          <ul class="movie-carousel">
+            <li class="card">
+              <div class="img">
+                <a href="movie-detail.html"
+                  ><img src="images/upcoming-1.png" alt=""
+                /></a>
+              </div>
+              <div class="title">
+                <a href="movie-detail.html"><h4>The Northman</h4></a>
+                <span>2022</span>
+              </div>
+              <div class="footer">
+                <span>HD</span>
+                <div class="time-rating">
+                  <span><i class="fa-regular fa-clock"></i> 137 min</span>
+                  <span><i class="fa-solid fa-star"></i> 8.5</span>
+                </div>
+              </div>
+            </li>
+            <li class="card">
+              <div class="img">
+                <a href="movie-detail.html"
+                  ><img src="images/upcoming-2.png" alt=""
+                /></a>
+              </div>
+              <div class="title">
+                <a href="movie-detail.html"><h4>Doctor Strange</h4></a>
+                <span>2022</span>
+              </div>
+              <div class="footer">
+                <span>4K</span>
+                <div class="time-rating">
+                  <span><i class="fa-regular fa-clock"></i> 126 min</span>
+                  <span><i class="fa-solid fa-star"></i> 8.5</span>
+                </div>
+              </div>
+            </li>
+            <li class="card">
+              <div class="img">
+                <a href="movie-detail.html"
+                  ><img src="images/upcoming-3.png" alt=""
+                /></a>
+              </div>
+              <div class="title">
+                <a href="movie-detail.html"><h4>Memory</h4></a>
+                <span>2022</span>
+              </div>
+              <div class="footer">
+                <span>2K</span>
+                <div class="time-rating">
+                  <span><i class="fa-regular fa-clock"></i> N/A</span>
+                  <span><i class="fa-solid fa-star"></i> 8.5</span>
+                </div>
+              </div>
+            </li>
+            <li class="card">
+              <div class="img">
+                <a href="movie-detail.html"
+                  ><img src="images/upcoming-4.png" alt=""
+                /></a>
+              </div>
+              <div class="title">
+                <a href="movie-detail.html"><h4>Unbearable Weight</h4></a>
+                <span>2022</span>
+              </div>
+              <div class="footer">
+                <span>HD</span>
+                <div class="time-rating">
+                  <span><i class="fa-regular fa-clock"></i> 107 min</span>
+                  <span><i class="fa-solid fa-star"></i> 8.5</span>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
 
-    <body>
-        <section class="pricing-section">
-            <div class="pricing-card">
-                <h3>Basic</h3>
-                <p class="price">Free</p>
-                <ul class="features">
-                    <li>Originals</li>
-                    <li>Switch plans anytime</li>
-                    <li>65+ top Live</li>
-                    <li>TV Channels</li>
-                    <li>4K Video Quality</li>
-                </ul>
-                <button class="pricing-button">REGISTER NOW</button>
+  </section>
+
+  <!-- top movie section start  -->
+  <section class="top-movie same">
+    <div class="headerrr">
+      <small>online streaming</small>
+      <h4>Top Rated Movies</h4>
+    </div>
+    <div class="top-movie-main">
+      <div class="movie-card">
+        <ul class="wrapper">
+          <li class="card">
+            <div class="img">
+              <a href="movie-detail.html"><img src="images/movie-1.png" alt="" /></a>
             </div>
-            <div class="pricing-card">
-                <h3>Premium</h3>
-                <p class="price">$15.99 <span>/month</span></p>
-                <ul class="features">
-                    <li>Originals</li>
-                    <li>Switch plans anytime</li>
-                    <li>Full HD Video Quality</li>
-                    <li>65+ top Live</li>
-                    <li>TV Channels</li>
-                </ul>
-                <button class="pricing-button">REGISTER NOW</button>
+            <div class="title">
+              <a href="movie-detail.html"><h4>Sonic</h4></a>
+              <span>2022</span>
             </div>
-            <div class="pricing-card">
-                <h3>VIP</h3>
-                <p class="price">$35.99 <span>/month</span></p>
-                <ul class="features">
-                    <li>Originals</li>
-                    <li>Switch plans anytime</li>
-                    <li>65+ top Live</li>
-                    <li>TV Channels</li>
-                    <li>4K Video Quality</li>
-                </ul>
-                <button class="pricing-button">REGISTER NOW</button>
+            <div class="footer">
+              <span>2K</span>
+              <div class="time-rating">
+                <span><i class="fa-regular fa-clock"></i> 122 min</span>
+                <span><i class="fa-solid fa-star"></i> 7.8</span>
+              </div>
             </div>
-        </section>
+          </li>
+          <li class="card">
+            <div class="img">
+              <a href="movie-detail.html"><img src="images/movie-2.png" alt="" /></a>
+            </div>
+            <div class="title">
+              <a href="movie-detail.html"><h4>Morbius</h4></a>
+              <span>2022</span>
+            </div>
+            <div class="footer">
+              <span>HD</span>
+              <div class="time-rating">
+                <span><i class="fa-regular fa-clock"></i> 104 min</span>
+                <span><i class="fa-solid fa-star"></i> 5.9</span>
+              </div>
+            </div>
+          </li>
+          <li class="card">
+            <div class="img">
+              <a href="movie-detail.html"><img src="images/movie-3.png" alt="" /></a>
+            </div>
+            <div class="title">
+              <a href="movie-detail.html"><h4>Adam Project</h4></a>
+              <span>2022</span>
+            </div>
+            <div class="footer">
+              <span>4K</span>
+              <div class="time-rating">
+                <span><i class="fa-regular fa-clock"></i> 106 min</span>
+                <span><i class="fa-solid fa-star"></i> 7.0</span>
+              </div>
+            </div>
+          </li>
+          <li class="card">
+            <div class="img">
+              <a href="movie-detail.html"><img src="images/movie-4.png" alt="" /></a>
+            </div>
+            <div class="title">
+              <a href="movie-detail.html"><h4>Free Guy</h4></a>
+              <span>2022</span>
+            </div>
+            <div class="footer">
+              <span>4K</span>
+              <div class="time-rating">
+                <span><i class="fa-regular fa-clock"></i> 115 min</span>
+                <span><i class="fa-solid fa-star"></i> 7.7</span>
+              </div>
+            </div>
+          </li>
+          <li class="card">
+            <div class="img">
+              <a href="movie-detail.html"><img src="images/movie-5.png" alt="" /></a>
+            </div>
+            <div class="title">
+              <a href="movie-detail.html"><h4>Batman</h4></a>
+              <span>2022</span>
+            </div>
+            <div class="footer">
+              <span>4K</span>
+              <div class="time-rating">
+                <span><i class="fa-regular fa-clock"></i> 176 min</span>
+                <span><i class="fa-solid fa-star"></i> 7.9</span>
+              </div>
+            </div>
+          </li>
+          <li class="card">
+            <div class="img">
+              <a href="movie-detail.html"><img src="images/movie-6.png" alt="" /></a>
+            </div>
+            <div class="title">
+              <a href="movie-detail.html"><h4>Uncharted</h4></a>
+              <span>2022</span>
+            </div>
+            <div class="footer">
+              <span>HD</span>
+              <div class="time-rating">
+                <span><i class="fa-regular fa-clock"></i> 116 min</span>
+                <span><i class="fa-solid fa-star"></i> 7.0</span>
+              </div>
+            </div>
+          </li>
+          <li class="card">
+            <div class="img">
+              <a href="movie-detail.html"><img src="images/movie-7.png" alt="" /></a>
+            </div>
+            <div class="title">
+              <a href="movie-detail.html"><h4>Death On..</h4></a>
+              <span>2022</span>
+            </div>
+            <div class="footer">
+              <span>2K</span>
+              <div class="time-rating">
+                <span><i class="fa-regular fa-clock"></i> 127 min</span>
+                <span><i class="fa-solid fa-star"></i> 6.5</span>
+              </div>
+            </div>
+          </li>
+          <li class="card">
+            <div class="img">
+              <a href="movie-detail.html"><img src="images/movie-8.png" alt="" /></a>
+            </div>
+            <div class="title">
+              <a href="movie-detail.html"><h4>Kings Man</h4></a>
+              <span>2022</span>
+            </div>
+            <div class="footer">
+              <span>HD</span>
+              <div class="time-rating">
+                <span><i class="fa-regular fa-clock"></i> 131 min</span>
+                <span><i class="fa-solid fa-star"></i> 7.0</span>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <!-- tvs series section starts  -->
+  <section class="tv-series same">
+    <div class="headerrr">
+      <small>best tv series</small>
+      <h4>World Best TV Series</h4>
+    </div>
+    <div class="movie-card">
+      <ul class="wrapper">
+        <li class="card">
+          <div class="img">
+            <a href="movie-detail.html"><img src="images/series-1.png" alt="" /></a>
+          </div>
+          <div class="title">
+            <a href="movie-detail.html"><h4>Moon Knight</h4></a>
+            <span>2022</span>
+          </div>
+          <div class="footer">
+            <span>2K</span>
+            <div class="time-rating">
+              <span><i class="fa-regular fa-clock"></i> 47 min</span>
+              <span><i class="fa-solid fa-star"></i> 8.6</span>
+            </div>
+          </div>
+        </li>
+        <li class="card">
+          <div class="img">
+            <a href="movie-detail.html"><img src="images/series-2.png" alt="" /></a>
+          </div>
+          <div class="title">
+            <a href="movie-detail.html"><h4>Halo</h4></a>
+            <span>2022</span>
+          </div>
+          <div class="footer">
+            <span>2K</span>
+            <div class="time-rating">
+              <span><i class="fa-regular fa-clock"></i> 59 min</span>
+              <span><i class="fa-solid fa-star"></i> 8.8</span>
+            </div>
+          </div>
+        </li>
+        <li class="card">
+          <div class="img">
+            <a href="movie-detail.html"><img src="images/series-3.png" alt="" /></a>
+          </div>
+          <div class="title">
+            <a href="movie-detail.html"><h4>Viking valhalla</h4></a>
+            <span>2022</span>
+          </div>
+          <div class="footer">
+            <span>2K</span>
+            <div class="time-rating">
+              <span><i class="fa-regular fa-clock"></i> 51 min</span>
+              <span><i class="fa-solid fa-star"></i> 8.3</span>
+            </div>
+          </div>
+        </li>
+        <li class="card">
+          <div class="img">
+            <a href="movie-detail.html"><img src="images/series-4.png" alt="" /></a>
+          </div>
+          <div class="title">
+            <a href="movie-detail.html"><h4>Money Heist</h4></a>
+            <span>2017</span>
+          </div>
+          <div class="footer">
+            <span>4K</span>
+            <div class="time-rating">
+              <span><i class="fa-regular fa-clock"></i> 70 min</span>
+              <span><i class="fa-solid fa-star"></i> 8.3</span>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+    <!-- services section design -->
+    <section class="pricing-section">
+      <div class="pricing-card">
+        <h3>Basic</h3>
+        <p class="price">Free</p>
+        <ul class="features">
+          <li>Originals</li>
+          <li>Switch plans anytime</li>
+          <li>65+ top Live</li>
+          <li>TV Channels</li>
+          <li>4K Video Quality</li>
+        </ul>
+        <button class="pricing-button">REGISTER NOW</button>
+      </div>
+      <div class="pricing-card">
+        <h3>Premium</h3>
+        <p class="price">$15.99 <span>/month</span></p>
+        <ul class="features">
+          <li>Originals</li>
+          <li>Switch plans anytime</li>
+          <li>Full HD Video Quality</li>
+          <li>65+ top Live</li>
+          <li>TV Channels</li>
+        </ul>
+        <button class="pricing-button">REGISTER NOW</button>
+      </div>
+      <div class="pricing-card">
+        <h3>VIP</h3>
+        <p class="price">$35.99 <span>/month</span></p>
+        <ul class="features">
+          <li>Originals</li>
+          <li>Switch plans anytime</li>
+          <li>65+ top Live</li>
+          <li>TV Channels</li>
+          <li>4K Video Quality</li>
+        </ul>
+        <button class="pricing-button">REGISTER NOW</button>
+      </div>
+    </section>
 
     <!--footer design-->
 
