--- a/index.html
+++ b/index.html
@@ -113,54 +113,51 @@
             <li class="card">
               <div class="img">
                 <a href="movie-detail.html"
-                  ><img src="images/upcoming-1.png" alt=""
+                  ><img src="./foto/Bambi.webp" alt="Bambi"
                 /></a>
               </div>
               <div class="title">
-                <a href="movie-detail.html"><h4>The Northman</h4></a>
-                <span>2022</span>
+                <a href="movie-detail.html"><h4>bambi: the reckoning</h4></a>
+                <span>2025</span>
               </div>
               <div class="footer">
                 <span>HD</span>
                 <div class="time-rating">
                   <span><i class="fa-regular fa-clock"></i> 137 min</span>
-                  <span><i class="fa-solid fa-star"></i> 8.5</span>
                 </div>
               </div>
             </li>
             <li class="card">
               <div class="img">
                 <a href="movie-detail.html"
-                  ><img src="images/upcoming-2.png" alt=""
+                  ><img src="./foto/poonivershe.jpg" alt="Poonivershe"
                 /></a>
               </div>
               <div class="title">
-                <a href="movie-detail.html"><h4>Doctor Strange</h4></a>
-                <span>2022</span>
+                <a href="movie-detail.html"><h4>Poohniverse: Monsters Assemble</h4></a>
+                <span>2025</span>
               </div>
               <div class="footer">
                 <span>4K</span>
                 <div class="time-rating">
-                  <span><i class="fa-regular fa-clock"></i> 126 min</span>
-                  <span><i class="fa-solid fa-star"></i> 8.5</span>
+                  <span><i class="fa-regular fa-clock"></i>119 min</span>
                 </div>
               </div>
             </li>
             <li class="card">
               <div class="img">
                 <a href="movie-detail.html"
-                  ><img src="images/upcoming-3.png" alt=""
+                  ><img src="./foto/Flight.jpg" alt="Flight" 
                 /></a>
               </div>
               <div class="title">
-                <a href="movie-detail.html"><h4>Memory</h4></a>
-                <span>2022</span>
+                <a href="movie-detail.html"><h4>Flight Risk</h4></a>
+                <span>2025</span>
               </div>
               <div class="footer">
                 <span>2K</span>
                 <div class="time-rating">
-                  <span><i class="fa-regular fa-clock"></i> N/A</span>
-                  <span><i class="fa-solid fa-star"></i> 8.5</span>
+                  <span><i class="fa-regular fa-clock"></i> 91 min</span>
                 </div>
               </div>
             </li>
@@ -200,129 +197,129 @@
         <ul class="wrapper">
           <li class="card">
             <div class="img">
-              <a href="movie-detail.html"><img src="images/movie-1.png" alt="" /></a>
+              <a href="movie-detail.html"><img src="foto/Smile2.jpg" alt="Smile 2" /></a>
             </div>
             <div class="title">
-              <a href="movie-detail.html"><h4>Sonic</h4></a>
-              <span>2022</span>
+              <a href="movie-detail.html"><h4>Smile 2</h4></a>
+              <span>2024</span>
             </div>
             <div class="footer">
               <span>2K</span>
               <div class="time-rating">
-                <span><i class="fa-regular fa-clock"></i> 122 min</span>
-                <span><i class="fa-solid fa-star"></i> 7.8</span>
-              </div>
-            </div>
-          </li>
-          <li class="card">
-            <div class="img">
-              <a href="movie-detail.html"><img src="images/movie-2.png" alt="" /></a>
-            </div>
-            <div class="title">
-              <a href="movie-detail.html"><h4>Morbius</h4></a>
-              <span>2022</span>
-            </div>
-            <div class="footer">
-              <span>HD</span>
-              <div class="time-rating">
-                <span><i class="fa-regular fa-clock"></i> 104 min</span>
-                <span><i class="fa-solid fa-star"></i> 5.9</span>
-              </div>
-            </div>
-          </li>
-          <li class="card">
-            <div class="img">
-              <a href="movie-detail.html"><img src="images/movie-3.png" alt="" /></a>
-            </div>
-            <div class="title">
-              <a href="movie-detail.html"><h4>Adam Project</h4></a>
-              <span>2022</span>
-            </div>
-            <div class="footer">
-              <span>4K</span>
-              <div class="time-rating">
-                <span><i class="fa-regular fa-clock"></i> 106 min</span>
-                <span><i class="fa-solid fa-star"></i> 7.0</span>
-              </div>
-            </div>
-          </li>
-          <li class="card">
-            <div class="img">
-              <a href="movie-detail.html"><img src="images/movie-4.png" alt="" /></a>
-            </div>
-            <div class="title">
-              <a href="movie-detail.html"><h4>Free Guy</h4></a>
-              <span>2022</span>
-            </div>
-            <div class="footer">
-              <span>4K</span>
-              <div class="time-rating">
-                <span><i class="fa-regular fa-clock"></i> 115 min</span>
-                <span><i class="fa-solid fa-star"></i> 7.7</span>
-              </div>
-            </div>
-          </li>
-          <li class="card">
-            <div class="img">
-              <a href="movie-detail.html"><img src="images/movie-5.png" alt="" /></a>
-            </div>
-            <div class="title">
-              <a href="movie-detail.html"><h4>Batman</h4></a>
-              <span>2022</span>
-            </div>
-            <div class="footer">
-              <span>4K</span>
-              <div class="time-rating">
-                <span><i class="fa-regular fa-clock"></i> 176 min</span>
+                <span><i class="fa-regular fa-clock"></i> 132 min</span>
                 <span><i class="fa-solid fa-star"></i> 7.9</span>
               </div>
             </div>
           </li>
           <li class="card">
             <div class="img">
-              <a href="movie-detail.html"><img src="images/movie-6.png" alt="" /></a>
+              <a href="movie-detail.html"><img src="./foto/Terrifier2poster2.webp" alt="Terrifier2" /></a>
             </div>
             <div class="title">
-              <a href="movie-detail.html"><h4>Uncharted</h4></a>
+              <a href="movie-detail.html"><h4>Terrifier</h4></a>
               <span>2022</span>
             </div>
             <div class="footer">
               <span>HD</span>
               <div class="time-rating">
-                <span><i class="fa-regular fa-clock"></i> 116 min</span>
+                <span><i class="fa-regular fa-clock"></i> 138 min</span>
+                <span><i class="fa-solid fa-star"></i> 7.3</span>
+              </div>
+            </div>
+          </li>
+          <li class="card">
+            <div class="img">
+              <a href="movie-detail.html"><img src="foto/SNowman.jpg" alt="snowman" /></a>
+            </div>
+            <div class="title">
+              <a href="movie-detail.html"><h4>The Snowman</h4></a>
+              <span>2017</span>
+            </div>
+            <div class="footer">
+              <span>4K</span>
+              <div class="time-rating">
+                <span><i class="fa-regular fa-clock"></i> 119 min</span>
                 <span><i class="fa-solid fa-star"></i> 7.0</span>
               </div>
             </div>
           </li>
           <li class="card">
             <div class="img">
-              <a href="movie-detail.html"><img src="images/movie-7.png" alt="" /></a>
+              <a href="movie-detail.html"><img src="foto/Redone.jpg" alt="RedOne" /></a>
             </div>
             <div class="title">
-              <a href="movie-detail.html"><h4>Death On..</h4></a>
+              <a href="movie-detail.html"><h4>Red One</h4></a>
+              <span>2024</span>
+            </div>
+            <div class="footer">
+              <span>4K</span>
+              <div class="time-rating">
+                <span><i class="fa-regular fa-clock"></i> 123 min</span>
+                <span><i class="fa-solid fa-star"></i> 7.6</span>
+              </div>
+            </div>
+          </li>
+          <li class="card">
+            <div class="img">
+              <a href="movie-detail.html"><img src="foto/Fall.jpg" alt="Fall" /></a>
+            </div>
+            <div class="title">
+              <a href="movie-detail.html"><h4>Fall</h4></a>
+              <span>2022</span>
+            </div>
+            <div class="footer">
+              <span>4K</span>
+              <div class="time-rating">
+                <span><i class="fa-regular fa-clock"></i> 107 min</span>
+                <span><i class="fa-solid fa-star"></i> 6.7</span>
+              </div>
+            </div>
+          </li>
+          <li class="card">
+            <div class="img">
+              <a href="movie-detail.html"><img src="foto/Spiderman.jpg" alt="Spiderman" /></a>
+            </div>
+            <div class="title">
+              <a href="movie-detail.html"><h4>Spider-Man: No Way Home</h4></a>
+              <span>2021</span>
+            </div>
+            <div class="footer">
+              <span>HD</span>
+              <div class="time-rating">
+                <span><i class="fa-regular fa-clock"></i> 148 min</span>
+                <span><i class="fa-solid fa-star"></i> 8.1</span>
+              </div>
+            </div>
+          </li>
+          <li class="card">
+            <div class="img">
+              <a href="movie-detail.html"><img src="foto/Bond.avif" alt="Bond" /></a>
+            </div>
+            <div class="title">
+              <a href="movie-detail.html"><h4>No Time to Die</h4></a>
               <span>2022</span>
             </div>
             <div class="footer">
               <span>2K</span>
               <div class="time-rating">
-                <span><i class="fa-regular fa-clock"></i> 127 min</span>
-                <span><i class="fa-solid fa-star"></i> 6.5</span>
+                <span><i class="fa-regular fa-clock"></i> 163 min</span>
+                <span><i class="fa-solid fa-star"></i> 7.1</span>
               </div>
             </div>
           </li>
           <li class="card">
             <div class="img">
-              <a href="movie-detail.html"><img src="images/movie-8.png" alt="" /></a>
+              <a href="movie-detail.html"><img src="foto/evilrise.jpg" alt="Devil" /></a>
             </div>
             <div class="title">
-              <a href="movie-detail.html"><h4>Kings Man</h4></a>
-              <span>2022</span>
+              <a href="movie-detail.html"><h4>Evil Dead Rise</h4></a>
+              <span>2023</span>
             </div>
             <div class="footer">
               <span>HD</span>
               <div class="time-rating">
-                <span><i class="fa-regular fa-clock"></i> 131 min</span>
-                <span><i class="fa-solid fa-star"></i> 7.0</span>
+                <span><i class="fa-regular fa-clock"></i> 97 min</span>
+                <span><i class="fa-solid fa-star"></i> 7.1</span>
               </div>
             </div>
           </li>
@@ -341,65 +338,65 @@
       <ul class="wrapper">
         <li class="card">
           <div class="img">
-            <a href="movie-detail.html"><img src="images/series-1.png" alt="" /></a>
+            <a href="movie-detail.html"><img src="./foto/Squidgames.jpg" alt="Squidgame" /></a>
           </div>
           <div class="title">
-            <a href="movie-detail.html"><h4>Moon Knight</h4></a>
-            <span>2022</span>
+            <a href="movie-detail.html"><h4>Squid Game </h4></a>
+            <span>2021</span>
           </div>
           <div class="footer">
             <span>2K</span>
             <div class="time-rating">
-              <span><i class="fa-regular fa-clock"></i> 47 min</span>
-              <span><i class="fa-solid fa-star"></i> 8.6</span>
+              <span><i class="fa-regular fa-clock"></i> Seasons: 2</span>
+              <span><i class="fa-solid fa-star"></i> 8.0</span>
             </div>
           </div>
         </li>
         <li class="card">
           <div class="img">
-            <a href="movie-detail.html"><img src="images/series-2.png" alt="" /></a>
+            <a href="movie-detail.html"><img src="foto/casalapapel.jpg" alt="Papel" /></a>
           </div>
           <div class="title">
-            <a href="movie-detail.html"><h4>Halo</h4></a>
-            <span>2022</span>
+            <a href="movie-detail.html"><h4>La casa de papel</h4></a>
+            <span>2017</span>
           </div>
           <div class="footer">
             <span>2K</span>
             <div class="time-rating">
-              <span><i class="fa-regular fa-clock"></i> 59 min</span>
-              <span><i class="fa-solid fa-star"></i> 8.8</span>
+              <span><i class="fa-regular fa-clock"></i>Seasons: 5</span>
+              <span><i class="fa-solid fa-star"></i> 8.2</span>
             </div>
           </div>
         </li>
         <li class="card">
           <div class="img">
-            <a href="movie-detail.html"><img src="images/series-3.png" alt="" /></a>
+            <a href="movie-detail.html"><img src="foto/prison.jpg" alt="prisonbreak" /></a>
           </div>
           <div class="title">
-            <a href="movie-detail.html"><h4>Viking valhalla</h4></a>
-            <span>2022</span>
+            <a href="movie-detail.html"><h4>Prison Break</h4></a>
+            <span>2005</span>
           </div>
           <div class="footer">
-            <span>2K</span>
+            <span>HD</span>
             <div class="time-rating">
-              <span><i class="fa-regular fa-clock"></i> 51 min</span>
+              <span><i class="fa-regular fa-clock"></i> Seasons: 5</span>
               <span><i class="fa-solid fa-star"></i> 8.3</span>
             </div>
           </div>
         </li>
         <li class="card">
           <div class="img">
-            <a href="movie-detail.html"><img src="images/series-4.png" alt="" /></a>
+            <a href="movie-detail.html"><img src="./foto/stranger.avif" alt="Stranger Things" /></a>
           </div>
           <div class="title">
-            <a href="movie-detail.html"><h4>Money Heist</h4></a>
-            <span>2017</span>
+            <a href="movie-detail.html"><h4>Stranger Things </h4></a>
+            <span>2016</span>
           </div>
           <div class="footer">
             <span>4K</span>
             <div class="time-rating">
-              <span><i class="fa-regular fa-clock"></i> 70 min</span>
-              <span><i class="fa-solid fa-star"></i> 8.3</span>
+              <span><i class="fa-regular fa-clock"></i> Seasons: 4</span>
+              <span><i class="fa-solid fa-star"></i> 8.7</span>
             </div>
           </div>
         </li>
