--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
       <div class="bx bx-menu" id="menu-icon"></div>
       <nav class="navbar">
         <a href="#home" class="active">Home</a>
-        <a href="#about">Trending Movies</a>
-        <a href="#services">Pricing</a>
+        <a href="#movie">Movies</a>
+        <a href="#series">Series</a>
+        <a href="#pricing">Pricing</a>
         <a href="#contact">Contact</a>
-        <a href="#signin">Signin</a>
       </nav>
     </header>
 
@@ -85,7 +85,7 @@
           enjoy—your cinematic journey starts here!"
         </p>
         <div class="btn-box">
-          <a href="#about"> See movies</a>
+          <a href="#movies"> See movies</a>
           <a href="contact.html"> Contact us</a>
         </div>
       </div>
@@ -100,6 +100,7 @@
       <span class="home-imgHover"></span>
     </section>
     <!-- upcoming movie section starts  -->
+     <div id="movie">
     <section class="upcoming-movie">
       <div class="headerr">
         <div class="subtitle">
@@ -183,6 +184,7 @@
         </div>
       </div>
     </section>
+    </div>
 
   </section>
 
@@ -329,6 +331,7 @@
   </section>
 
   <!-- tvs series section starts  -->
+   <div id="series">
   <section class="tv-series same">
     <div class="headerrr">
       <small>best tv series</small>
@@ -403,18 +406,25 @@
       </ul>
     </div>
   </section>
+</div>
 
     <!-- services section design -->
+     <div id="pricing">
+      <div class="pricing-header">
+        <h4>Pricing</h4>
+      </div>
     <section class="pricing-section">
       <div class="pricing-card">
         <h3>Basic</h3>
         <p class="price">Free</p>
         <ul class="features">
           <li>Originals</li>
-          <li>Switch plans anytime</li>
           <li>65+ top Live</li>
           <li>TV Channels</li>
           <li>4K Video Quality</li>
+          <li>-</li>
+          <li>-</li>
+          <li>-</li>
         </ul>
         <button class="pricing-button">REGISTER NOW</button>
       </div>
@@ -427,6 +437,8 @@
           <li>Full HD Video Quality</li>
           <li>65+ top Live</li>
           <li>TV Channels</li>
+          <li>No Ads</li>
+          <li>-</li>
         </ul>
         <button class="pricing-button">REGISTER NOW</button>
       </div>
@@ -436,13 +448,16 @@
         <ul class="features">
           <li>Originals</li>
           <li>Switch plans anytime</li>
+          <li>Full HD Video Quality</li>
           <li>65+ top Live</li>
           <li>TV Channels</li>
-          <li>4K Video Quality</li>
+          <li>No Ads</li>
+          <li>Download available</li>
         </ul>
         <button class="pricing-button">REGISTER NOW</button>
       </div>
     </section>
+  </div>
 
     <!--footer design-->
 
