--- a/index.html
+++ b/index.html
@@ -470,11 +470,11 @@
         <p class="footer-links">
           <a href="#">Home</a>
           |
-          <a href="#">About</a>
+          <a href="#">Movies</a>
           |
-          <a href="#">Services</a>
-          |
-          <a href="#">Contact</a>
+          <a href="#">Series</a>
+          
+          <a href="#">Pricing</a>
         </p>
 
         <p class="footer-company-name">
