contact page and more

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Streambox | Movies Anytime, Anywhere</title>
-    <link rel="icon" type="image/jpg" href="/favicon_io/favicon-16x16.png" />
+   
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -54,10 +54,11 @@
         <a href="#movie">Movies</a>
         <a href="#series">Series</a>
         <a href="#pricing">Pricing</a>
-        <a href="#contact">Contact</a>
+        <a href="/contact/index.html">Contact</a>
       </nav>
     </header>
-
+    
+<main>
     <section class="home">
       <div class="home-content">
         <h1>Streambox</h1>
@@ -108,7 +109,7 @@
           <ul class="movie-carousel">
             <li class="card">
               <div class="img">
-                <a href="movie-detail.html"
+                <a href="../coworkingWEB/film_detail/"
                   ><img src="./foto/Bambi.webp" alt="Bambi"
                 /></a>
               </div>
@@ -454,6 +455,7 @@
     </section>
   </div>
 
+</main>
     <!--footer design-->
 
     <hr style="background-color: white" />
@@ -491,6 +493,6 @@
       </div>
     </footer>
 
-    <script src="/script.js"></script>
+
   </body>
 </html>
