--- a/film_detail/index.html
+++ b/film_detail/index.html
@@ -30,7 +30,7 @@
 
     <div class="movie-container">
       <div class="movie-poster">
-        <img src="/coworkingWEB/foto/Bambi.webp" alt="Movie Poster" />
+        <img src="../foto/Bambi.webp" alt="Movie Poster" />
       </div>
       <div class="movie-details">
         <h1 class="movie-title">Bambi</h1>
