--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <ul class="movie-carousel">
             <li class="card">
               <div class="img">
-                <a href="../coworkingWEB/film_detail/"
+                <a href="/film_detail/index.html"
                   ><img src="./foto/Bambi.webp" alt="Bambi"
                 /></a>
               </div>
