--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
       </div>
       <span class="home-imgHover"></span>
     </section>
+
     <!-- upcoming movie section starts  -->
      <div id="movie">
     <section class="upcoming-movie">
@@ -104,15 +105,15 @@
           <h4>Upcoming Movies</h4>
         </div>
       </div>
-      <div class="movie-card">
+      <article class="movie-card">
         <div class="wrapper">
           <ul class="movie-carousel">
             <li class="card">
-              <div class="img">
+              <figure class="img">
                 <a href="/film_detail/index.html"
                   ><img src="./foto/Bambi.webp" alt="Bambi"
                 /></a>
-              </div>
+              </figure>
               <div class="title">
                 <a href="movie-detail.html"><h4>bambi: the reckoning</h4></a>
                 <span>2025</span>
@@ -124,12 +125,13 @@
                 </div>
               </div>
             </li>
+            
             <li class="card">
-              <div class="img">
+              <figure class="img">
                 <a href="movie-detail.html"
                   ><img src="./foto/poonivershe.jpg" alt="Poonivershe"
                 /></a>
-              </div>
+              </figure>
               <div class="title">
                 <a href="movie-detail.html"><h4>Poohniverse: Monsters Assemble</h4></a>
                 <span>2025</span>
@@ -159,11 +161,11 @@
               </div>
             </li>
             <li class="card">
-              <div class="img">
+              <figure class="img">
                 <a href="movie-detail.html"
                   ><img src="images/upcoming-4.png" alt=""
                 /></a>
-              </div>
+              </figure>
               <div class="title">
                 <a href="movie-detail.html"><h4>Unbearable Weight</h4></a>
                 <span>2022</span>
@@ -178,10 +180,9 @@
             </li>
           </ul>
         </div>
-      </div>
+      </article>
     </section>
     </div>
-
   </section>
 
   <!-- top movie section start  -->
@@ -191,12 +192,12 @@
       <h4>Top Rated Movies</h4>
     </div>
     <div class="top-movie-main">
-      <div class="movie-card">
+      <article class="movie-card">
         <ul class="wrapper">
           <li class="card">
-            <div class="img">
+            <figure class="img">
               <a href="movie-detail.html"><img src="foto/Smile2.jpg" alt="Smile 2" /></a>
-            </div>
+            </figure>
             <div class="title">
               <a href="movie-detail.html"><h4>Smile 2</h4></a>
               <span>2024</span>
@@ -210,9 +211,9 @@
             </div>
           </li>
           <li class="card">
-            <div class="img">
+            <figure class="img">
               <a href="movie-detail.html"><img src="./foto/Terrifier2poster2.webp" alt="Terrifier2" /></a>
-            </div>
+            </figure>
             <div class="title">
               <a href="movie-detail.html"><h4>Terrifier</h4></a>
               <span>2022</span>
@@ -226,9 +227,9 @@
             </div>
           </li>
           <li class="card">
-            <div class="img">
+            <figure class="img">
               <a href="movie-detail.html"><img src="foto/SNowman.jpg" alt="snowman" /></a>
-            </div>
+            </figure>
             <div class="title">
               <a href="movie-detail.html"><h4>The Snowman</h4></a>
               <span>2017</span>
@@ -242,9 +243,9 @@
             </div>
           </li>
           <li class="card">
-            <div class="img">
+            <figure class="img">
               <a href="movie-detail.html"><img src="foto/Redone.jpg" alt="RedOne" /></a>
-            </div>
+            </figure>
             <div class="title">
               <a href="movie-detail.html"><h4>Red One</h4></a>
               <span>2024</span>
@@ -258,9 +259,9 @@
             </div>
           </li>
           <li class="card">
-            <div class="img">
+            <figure class="img">
               <a href="movie-detail.html"><img src="foto/Fall.jpg" alt="Fall" /></a>
-            </div>
+            </figure>
             <div class="title">
               <a href="movie-detail.html"><h4>Fall</h4></a>
               <span>2022</span>
@@ -274,9 +275,9 @@
             </div>
           </li>
           <li class="card">
-            <div class="img">
+            <figure class="img">
               <a href="movie-detail.html"><img src="foto/Spiderman.jpg" alt="Spiderman" /></a>
-            </div>
+            </figure>
             <div class="title">
               <a href="movie-detail.html"><h4>Spider-Man: No Way Home</h4></a>
               <span>2021</span>
@@ -290,9 +291,9 @@
             </div>
           </li>
           <li class="card">
-            <div class="img">
+            <figure class="img">
               <a href="movie-detail.html"><img src="foto/Bond.avif" alt="Bond" /></a>
-            </div>
+            </figure>
             <div class="title">
               <a href="movie-detail.html"><h4>No Time to Die</h4></a>
               <span>2022</span>
@@ -306,9 +307,9 @@
             </div>
           </li>
           <li class="card">
-            <div class="img">
+            <figure class="img">
               <a href="movie-detail.html"><img src="foto/evilrise.jpg" alt="Devil" /></a>
-            </div>
+            </figure>
             <div class="title">
               <a href="movie-detail.html"><h4>Evil Dead Rise</h4></a>
               <span>2023</span>
@@ -322,7 +323,7 @@
             </div>
           </li>
         </ul>
-      </div>
+      </article>
     </div>
   </section>
 
@@ -333,12 +334,12 @@
       <small>best tv series</small>
       <h4>World Best TV Series</h4>
     </div>
-    <div class="movie-card">
+    <article class="movie-card">
       <ul class="wrapper">
         <li class="card">
-          <div class="img">
+          <figure class="img">
             <a href="movie-detail.html"><img src="./foto/Squidgames.jpg" alt="Squidgame" /></a>
-          </div>
+          </figure>
           <div class="title">
             <a href="movie-detail.html"><h4>Squid Game </h4></a>
             <span>2021</span>
@@ -352,9 +353,9 @@
           </div>
         </li>
         <li class="card">
-          <div class="img">
+          <figure class="img">
             <a href="movie-detail.html"><img src="foto/casalapapel.jpg" alt="Papel" /></a>
-          </div>
+          </figure>
           <div class="title">
             <a href="movie-detail.html"><h4>La casa de papel</h4></a>
             <span>2017</span>
@@ -368,13 +369,13 @@
           </div>
         </li>
         <li class="card">
-          <div class="img">
+          <figure class="img">
             <a href="movie-detail.html"><img src="foto/prison.jpg" alt="prisonbreak" /></a>
-          </div>
+          </figure>
           <div class="title">
             <a href="movie-detail.html"><h4>Prison Break</h4></a>
             <span>2005</span>
-          </div>
+          </figure>
           <div class="footer">
             <span>HD</span>
             <div class="time-rating">
@@ -384,9 +385,9 @@
           </div>
         </li>
         <li class="card">
-          <div class="img">
+          <figure class="img">
             <a href="movie-detail.html"><img src="./foto/stranger.avif" alt="Stranger Things" /></a>
-          </div>
+          </figure>
           <div class="title">
             <a href="movie-detail.html"><h4>Stranger Things </h4></a>
             <span>2016</span>
@@ -400,7 +401,7 @@
           </div>
         </li>
       </ul>
-    </div>
+    </article>
   </section>
 </div>
 
@@ -424,7 +425,7 @@
         </ul>
         <button class="pricing-button">REGISTER NOW</button>
       </div>
-      <div class="pricing-card">
+      <article class="pricing-card">
         <h3>Premium</h3>
         <p class="price">$15.99 <span>/month</span></p>
         <ul class="features">
@@ -437,8 +438,8 @@
           <li>-</li>
         </ul>
         <button class="pricing-button">REGISTER NOW</button>
-      </div>
-      <div class="pricing-card">
+      </article>
+      <article class="pricing-card">
         <h3>VIP</h3>
         <p class="price">$35.99 <span>/month</span></p>
         <ul class="features">
@@ -451,7 +452,7 @@
           <li>Download available</li>
         </ul>
         <button class="pricing-button">REGISTER NOW</button>
-      </div>
+      </article>
     </section>
   </div>
 
