--- a/film_detail/bambi.html
+++ b/film_detail/bambi.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="bambi.css" />
   </head>
   <body>
     <header class="header">
@@ -52,7 +52,11 @@
           <p><strong>Release Date:</strong> July 16, 2010</p>
           <p><strong>Duration:</strong> 2h 28min</p>
         </div>
-        <button class="watch-trailer">Watch Trailer</button>
+        <button class="watch-trailer">
+          <a href="https://youtu.be/V4UHKdMw0Hk?si=ul0FWutx2V00vBFA"
+            >Watch Trailer</a
+          >
+        </button>
       </div>
     </div>
   </body>
