--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
             </li>
             <li class="card">
               <div class="img">
-                <a href="movie-detail.html"
+                <a href="/film_detail/bambi.html"
                   ><img src="./foto/Flight.jpg" alt="Flight" 
                 /></a>
               </div>
               <div class="title">
-                <a href="movie-detail.html"><h4>Flight Risk</h4></a>
+                <a href="/film_detail/bambi.html"><h4>Flight Risk</h4></a>
                 <span>2025</span>
               </div>
               <div class="footer">
@@ -162,13 +162,13 @@
             </li>
             <li class="card">
               <figure class="img">
-                <a href="movie-detail.html"
-                  ><img src="images/upcoming-4.png" alt=""
+                <a href="/film_detail/bambi.html"
+                  ><img src="/foto/Fall.jpg" alt="poster van Fall"
                 /></a>
               </figure>
               <div class="title">
-                <a href="movie-detail.html"><h4>Unbearable Weight</h4></a>
-                <span>2022</span>
+                <a href="/film_detail/bambi.html"><h4>Fall</h4></a>
+                <span>2025</span>
               </div>
               <div class="footer">
                 <span>HD</span>
@@ -178,6 +178,7 @@
                 </div>
               </div>
             </li>
+            
           </ul>
         </div>
       </article>
@@ -212,10 +213,10 @@
           </li>
           <li class="card">
             <figure class="img">
-              <a href="movie-detail.html"><img src="./foto/Terrifier2poster2.webp" alt="Terrifier2" /></a>
+              <a href="/film_detail/smile.html"><img src="./foto/Terrifier2poster2.webp" alt="Terrifier2" /></a>
             </figure>
             <div class="title">
-              <a href="movie-detail.html"><h4>Terrifier</h4></a>
+              <a href="/film_detail/smile.html"><h4>Terrifier</h4></a>
               <span>2022</span>
             </div>
             <div class="footer">
@@ -228,10 +229,10 @@
           </li>
           <li class="card">
             <figure class="img">
-              <a href="movie-detail.html"><img src="foto/SNowman.jpg" alt="snowman" /></a>
+              <a href="/film_detail/pooniverse.html"><img src="foto/Redone.jpg" alt="poster van Redone" /></a>
             </figure>
             <div class="title">
-              <a href="movie-detail.html"><h4>The Snowman</h4></a>
+              <a href="/film_detail/pooniverse.html"><h4>Redone</h4></a>
               <span>2017</span>
             </div>
             <div class="footer">
@@ -322,22 +323,7 @@
               </div>
             </div>
           </li>
-          <li class="card">
-            <figure class="img">
-              <a href="movie-detail.html"><img src="./foto/stranger.avif" alt="Stranger Things" /></a>
-            </figure>
-            <div class="title">
-              <a href="movie-detail.html"><h4>Stranger Things </h4></a>
-              <span>2016</span>
-            </div>
-            <div class="footer">
-              <span>4K</span>
-              <div class="time-rating">
-                <span><i class="fa-regular fa-clock"></i> Seasons: 4</span>
-                <span><i class="fa-solid fa-star"></i> 8.7</span>
-              </div>
-            </div>
-          </li>
+          
         </ul>
       </article>
     </div>
@@ -397,6 +383,22 @@
             <div class="time-rating">
               <span><i class="fa-regular fa-clock"></i> Seasons: 5</span>
               <span><i class="fa-solid fa-star"></i> 8.3</span>
+            </div>
+          </div>
+        </li>
+        <li class="card">
+          <figure class="img">
+            <a href="/film_detail/bambi.html"><img src="./foto/stranger.avif" alt="Stranger Things" /></a>
+          </figure>
+          <div class="title">
+            <a href="/film_detail/bambi.html"><h4>Stranger Things </h4></a>
+            <span>2016</span>
+          </div>
+          <div class="footer">
+            <span>4K</span>
+            <div class="time-rating">
+              <span><i class="fa-regular fa-clock"></i> Seasons: 4</span>
+              <span><i class="fa-solid fa-star"></i> 8.7</span>
             </div>
           </div>
         </li>
