responsive home klaar

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <ul class="movie-carousel">
             <li class="card">
               <figure class="img">
-                <a href="/film_detail/index.html"
+                <a href="/film_detail/bambi.html"
                   ><img src="./foto/Bambi.webp" alt="Bambi"
                 /></a>
               </figure>
