maps weather responsive

--- a/film_detail/bambi.html
+++ b/film_detail/bambi.html
@@ -20,11 +20,11 @@
 
       <div class="bx bx-menu" id="menu-icon"></div>
       <nav class="navbar">
-        <a href="/coworkingWEB/index.html" class="active">Home</a>
-        <a href="/coworkingWEB/index.html">Movies</a>
-        <a href="/coworkingWEB/index.html">Series</a>
-        <a href="#/coworkingWEB/index.html">Pricing</a>
-        <a href="#contact">Contact</a>
+        <a href="/" class="active">Home</a>
+        <a href="/">Movies</a>
+        <a href="/">Series</a>
+        <a href="/">Pricing</a>
+        <a href="/contact/">Contact</a>
       </nav>
     </header>
 
@@ -36,6 +36,7 @@
         <h1 class="movie-title">Bambi</h1>
         <p class="movie-genre">Action, Sci-Fi, Thriller</p>
         <p class="movie-rating">Rating: <span>8.8/10</span></p>
+        <div class="heart"></div>
         <!-- emdp -->
         <p class="movie-description">
           A thief who steals corporate secrets through the use of dream-sharing
