--- a/film_detail/smile.html
+++ b/film_detail/smile.html
@@ -36,6 +36,7 @@
         <h1 class="movie-title">Smile 2</h1>
         <p class="movie-genre">Horror</p>
         <p class="movie-rating">Rating: <span>6.8/10</span></p>
+        <div class="heart"></div>
         <!-- emdp -->
         <p class="movie-description">
           "Smile 2" follows pop star Skye Riley, haunted by a malevolent entity
